--- a/test.html
+++ b/test.html
@@ -4,7 +4,7 @@
         <title>Test</title>
     </head>
     <body>
-        <h1>Hello World</h1>
+        <h1>Hello World gays</h1>
         <h2>Hello Bitch</h2>
         <h3>Hello Maderfaker</h3>
     </body>
